--- a/database_setup.ipynb
+++ b/database_setup.ipynb
@@ -166,6 +166,7 @@
     "           ('Zahlung', 'SEPA-Mandat', 'automatische (regelmäßige) Rechnungsbegleichung durch direkten Bankeinzug', 'S'),\n",
     "           ('Zahlung', 'Bankeinzug', 'Rechnungsbegleichung durch direkten Bankeinzug', 'BE'),\n",
     "           ('Transfer', 'Abheben', 'Geldabheben', 'A'),\n",
+    "           ('Transfer', 'Aufladen', 'Aufladen auf eine Chipkarte', 'AU'),\n",
     "           ('Transfer', 'Kontotransfer', 'Transger von Geld zwischen zwei Konten', 'KT'),\n",
     "           ('Transfer', 'Bargeldtransfer', 'Transfer von Bargeld zwischen zwei baren Geldtöpfen', 'BT'),\n",
     "           ('Recieving', 'Einnahme', 'reguläre Geldeinnahme', 'E'),\n",
