--- a/database_setup.ipynb
+++ b/database_setup.ipynb
@@ -158,7 +158,7 @@
     "''')\n",
     "\n",
     "crsr.execute('''\n",
-    "    INSERT INTO payment_types\n",
+    "    INSERT INTO event_types\n",
     "    VALUES ('Zahlung', 'Barzahlung', 'bares Bezahlen', 'B'),\n",
     "           ('Zahlung', 'Kartenzahlung', 'Zahlen mit Visa oder Girokarte', 'K'),\n",
     "           ('Zahlung', 'Überweisung', 'Rechnungsbegleichung durch Überweisen', 'U'),\n",
@@ -425,7 +425,7 @@
     "''')\n",
     "\n",
     "crsr.execute('''\n",
-    "    INSERT INTO budget_pots\n",
+    "    INSERT INTO database_event_types\n",
     "    VALUES ('Erstellung', 'Erstellung eines Eintrages'),\n",
     "           ('Update', 'Hinzufügen von Information'),\n",
     "           ('Korrektur', 'Korrigieren eines Eintrages'),\n",
