Saves of stuff before 13/10

--- a/database_setup.ipynb
+++ b/database_setup.ipynb
@@ -133,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "crsr = db.cursor()\n",
