--- a/excel_to_db_v2.ipynb
+++ b/excel_to_db_v2.ipynb
@@ -753,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checked_full_match_konto = use_excel_for_data_entry(gk_wb_filename, copy_mode=False)"
@@ -855,7 +857,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## List of all fully matched things we didnt treat yet\n",
@@ -868,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(all_info[all_info['description'].str.contains('Schatulle')])\n",
@@ -887,7 +893,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(schatulle_info)\n",
@@ -975,7 +983,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "subsetting_rules = {'description' : 'Geld abheben', '_merge' : 'right_only', 'treated' : 'No'}\n",
@@ -1095,7 +1105,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checked_data = use_excel_for_data_entry(mark_transfers_filename, copy_mode=False, open_before_read=True)\n",
@@ -1105,7 +1117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "display(checked_transfer_data)\n",
@@ -1122,7 +1136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Mark remaining as : Budget_Event, Money_Transfer, Payment, Complex Process\n",
@@ -1292,7 +1308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try :\n",
